pravki 2.3 nav + konstruktor3.1 commit

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -394,7 +394,12 @@
 
 
 @media only screen and (max-width : 767px)
+	.konstruktor--step__comment_block
+		width: 70%
 	
+	.block__header .konstruktor--step__comment_img
+		margin-right: 20px
+
 	.header__login
 		font-size: 16px
 
@@ -723,6 +728,10 @@
 
 
 @media only screen and (max-width : 480px)
+	.block__header .arrow
+		top: 10px
+		right: 0px
+
 	.login__form .btn
 		width: 70%
 		margin-right: 0
