--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -259,6 +259,12 @@
 		&:focus
 			color: $accent
 
+			span
+				border-color: $accent
+
+				&::before
+					border-color: $accent
+
 		span
 			position: relative
 			display: block
