pravki 2.4 nav + konstruktor3.1 commit

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -394,6 +394,16 @@
 
 
 @media only screen and (max-width : 767px)
+	.exercises
+		&__btn
+			div
+				width: 100%
+				flex-wrap: wrap
+
+				a
+					width: 100%
+					max-width: 320px
+
 	.konstruktor--step__comment_block
 		width: 70%
 	
