--- a/app/sass/_page/_exercises.sass
+++ b/app/sass/_page/_exercises.sass
@@ -8,16 +8,23 @@
 		margin-bottom: 65px
 
 		input
-			width: 48%
+			width: 60%
 			border-radius: 25px
 			background-image: url(../img/search.png)
 			background-repeat: no-repeat
 			background-position: 95% center
 			padding: 0 25px
+			margin-bottom: 15px
 
 		a
 			margin-right: 25px
 			padding: 0 40px
+			margin-bottom: 10px
+
+		div
+			width: 70%
+			display: flex
+			justify-content: center
 
 	&__list
 		display: flex
