apdate konstruktor2 commit

--- a/app/sass/_base.sass
+++ b/app/sass/_base.sass
@@ -28,6 +28,7 @@ body
 	justify-content: space-between
 	background-color: #242424
 	min-height: 100vh
+	zoom: 90%
 
 ::selection
 	background-color: $accent
@@ -181,7 +182,10 @@ button:hover,
 	outline: none
 	text-decoration: none
 	transition: all .3s
+	cursor: pointer
 
+
+				
 
 
 @import "_base/preloader"
