--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -18,8 +18,12 @@
 
 
 	.exercises
-		&__btn input
-			width: 37%
+		&__btn
+			p
+				width: 30%
+
+			div
+				width: 65%
 
 		&__item
 			width: 24%
@@ -165,7 +169,14 @@
 				padding: 0 15px
 
 			input
-				width: 34%
+				width: 60%
+
+			p, div
+				width: 100%
+
+			div
+				margin-bottom: 15px
+
 		&__item
 			width: 32%
 
@@ -830,6 +841,7 @@
 			b
 				margin-right: 0
 				margin-bottom: 20px
+				justify-content: center
 
 			label
 				bottom: 80%
