--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -9,6 +9,16 @@
 	border-top: 1px solid rgba($text, .2)
 	z-index: 2
 
+	.exercises__btn
+		display: flex
+		margin-bottom: 30px
+
+		button
+			width: 10%
+
+	.block--select
+		background-color: #363636
+
 	h3
 		position: relative
 		width: 100%
