--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -6,6 +6,19 @@
 
 
 @media only screen and (max-width : 1440px)
+	.modal
+		.exercises__btn
+			input
+				width: 85%
+
+			button
+				width: 15%
+	
+	.konstruktor--step__form_left
+		a
+			font-size: 16px
+
+
 	.index__item
 		width: 23%
 
