--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -229,10 +229,10 @@
 		&__user,
 		&__chat
 			background-color: #000
+			width: 70%
+			margin: 0 auto
 
 		&__user
-			width: 30%
-
 			&_header
 				padding: 25px
 				border-bottom: 1px solid #242424
@@ -299,8 +299,6 @@
 						border-radius: 50%
 
 		&__chat
-			width: 68%
-
 			&_header
 				position: relative
 				display: flex
@@ -370,18 +368,6 @@
 			&_form
 				padding: 20px 50px 20px 30px
 
-				textarea
-					min-height: 50px
-					height: 50px
-					padding: 10px 20px
-					border-radius: 50px
-					background-image: url(../img/masseg.png)
-					background-repeat: no-repeat
-					background-position: 96% 50%
-					line-height: 1.5
-
-					&::placeholder
-						line-height: 30px
 		
 			.link
 				position: absolute
