apdate 2.2 chat commit

--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -299,6 +299,9 @@
 						border-radius: 50%
 
 		&__chat
+			.exercises__btn
+				margin-bottom: 0
+				
 			&_header
 				position: relative
 				display: flex
