--- a/app/sass/_page/_exercises.sass
+++ b/app/sass/_page/_exercises.sass
@@ -18,6 +18,7 @@
 			height: 50px
 			padding: 10px 20px
 			line-height: 1.5
+			margin-bottom: 0
 
 			&::placeholder
 				line-height: 30px
@@ -40,6 +41,7 @@
 
 		.chat--button
 			background-image: url(../img/masseg.png)
+			width: 10% !important
 
 			&:hover,
 			&:focus
