--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -566,7 +566,7 @@
 			max-width: 100%
 			width: 100%
 			margin-right: 0
-			margin-bottom: 20px
+			margin-bottom: 0
 
 		&__header
 			font-size: 16px
@@ -809,9 +809,12 @@
 					
 					p
 						flex-wrap: wrap
+						margin-bottom: 10px
 
 					span
 						width: 100%
+						margin-bottom: 5px
+
 						&:first-child
 							width: 100%
 
