--- a/app/sass/_page/_profile.sass
+++ b/app/sass/_page/_profile.sass
@@ -73,6 +73,7 @@
 				justify-content: space-between
 				margin-bottom: 45px
 				font-size: 16px
+				margin-right: 20px
 
 			span
 				font-size: 16px
@@ -301,7 +302,7 @@
 		&__chat
 			.exercises__btn
 				margin-bottom: 0
-				
+
 			&_header
 				position: relative
 				display: flex
