--- a/app/sass/_page/_exercises.sass
+++ b/app/sass/_page/_exercises.sass
@@ -4,12 +4,12 @@
 	&__btn
 		display: flex
 		justify-content: space-around
+		flex-wrap: wrap
 		margin-bottom: 65px
 
 		input, textarea
-			width: 90%
-			border-bottom-left-radius: 25px
-			border-top-left-radius: 25px
+			width: 85%
+			border-radius: 25px
 			padding: 0 25px
 			margin-bottom: 15px
 
@@ -25,14 +25,14 @@
 
 		button
 			width: 20%
-			border-bottom-right-radius: 25px
-			border-top-right-radius: 25px
+			border-radius: 25px
 			background-color: #313131
 			border: none
 			height: 50px
 			background-image: url(../img/search.png)
 			background-repeat: no-repeat
 			background-position: center
+			min-width: 60px
 
 			&:hover,
 			&:focus
