--- a/app/sass/_page/_konstruktor.sass
+++ b/app/sass/_page/_konstruktor.sass
@@ -105,14 +105,14 @@
 				transition: all .6s
 
 		.konstruktor--step__comment_img
-			width: 100px
-			height: 100px
+			width: 160px
+			height: auto
 			margin-bottom: 0
-			margin-right: 50px
+			margin-right: 25px
 
 			img
-				width: 100px
-				height: 100px
+				width: 160px
+				height: auto
 
 	&__content
 		width: 100%
@@ -127,12 +127,10 @@
 			margin-bottom: 25px
 			
 
-
-
 .konstruktor
 
 	&__container
-		max-width: 930px
+		max-width: 930px !important
 
 	&__block
 		width: auto !important
@@ -315,7 +313,7 @@
 		margin-bottom: 70px
 
 		input
-			max-width: 310px
+			max-width: 539px
 			background-color: #000
 			border-radius: 20px
 			color: #fff
@@ -484,23 +482,18 @@
 					opacity: 0
 					transition: all .6s
 
-					&::before,
-					&::after
+					&::before
 						content: ''
 						display: block
 						position: absolute
 						left: 50%
 						top: 50%
-						transform: translate(-50%, -50%)
-						background-color: $text
+						transform: translate(-20%, -50%)
+						border-bottom: 10px solid transparent
+						border-left: 20px solid #fff
+						border-right: 20px solid transparent
+						border-top: 10px solid transparent
 
-					&::before
-						width: 3px
-						height: 16px
-
-					&::after
-						width: 16px
-						height: 3px
 
 			&_option
 				position: absolute
@@ -580,7 +573,8 @@
 					left: 50%
 					top: 50%
 					transform: translate(-50%, -50%)
-					max-width: 70px
+					max-width: 100%
+					max-height: 100%
 
 			&_right
 				width: 75%
