--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -307,6 +307,40 @@
 			img
 				margin-right: 7px
 
+.about
+	text-align: center
+	
+	h2
+		justify-content: center
+		margin-bottom: 25px
+
+	h3
+		margin-bottom: 20px
+		font-size: 20px
+		text-transform: uppercase
+		
+	p
+		margin-bottom: 20px
+		font-size: 16px
+
+	img
+		width: 70px
+		margin-bottom: 10px
+
+	&__list
+		display: flex
+		justify-content: space-around
+		flex-wrap: wrap
+
+	&__item
+		width: 32%
+		min-width: 220px
+		margin-bottom: 25px
+
+		p
+			margin-bottom: 0
+
+
 
 
 @import "_page/trainers"
