--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -51,6 +51,7 @@
 	.header__logo
 		img
 			width: 300px
+			height: auto
 
 	.nav
 		width: 40%
@@ -693,7 +694,8 @@
 
 	.header__logo img
 		width: 215px
-
+		height: auto
+		
 	.nav
 		&--active
 			top: 75px
