--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -368,11 +368,11 @@
 
 	.nav
 		position: fixed
-		top: -100%
+		top: -120%
 		left: 0
 		right: 0
 		display: block
-		width: 100vw
+		min-width: 100%
 		height: 100vh
 		flex-direction: column
 		z-index: 100
