--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -150,7 +150,6 @@
 		&:focus
 			transform: translate(0, -40px)
 
-
 		&:last-child
 			margin-right: 0
 
@@ -169,6 +168,21 @@
 		span
 			color: #fff
 			font-size: 20px
+
+	&__form
+		justify-content: flex-end !important
+		margin-bottom: 20px !important
+
+		p
+			width: 74% !important
+		
+		input
+			border-color: #ffffff
+			width: 85% !important
+		
+		button
+			background-color: $accent !important
+			width: 15% !important
 
 
 .footer
@@ -307,6 +321,7 @@
 			img
 				margin-right: 7px
 
+
 .about
 	text-align: center
 	
@@ -341,7 +356,7 @@
 			margin-bottom: 0
 
 
-
+.reviews
 
 @import "_page/trainers"
 @import "_page/exercises"
