--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -437,7 +437,7 @@
 
 	.konstruktor--step__comment_block
 		width: 70%
-	
+
 	.block__header .konstruktor--step__comment_img
 		margin-right: 20px
 
@@ -446,11 +446,10 @@
 
 		img
 			margin-right: 5px
-		
+
 	.main
 		&::after
 			display: none
-
 
 	.konstruktor
 		&__title--left
@@ -565,7 +564,6 @@
 		&--list__item
 			width: 48%
 
-
 	.block
 		padding: 15px 20px
 
@@ -629,6 +627,16 @@
 		&__col
 			width: 48%
 
+	.reviews
+		&__text
+			width: 100%
+			text-align: center
+
+			p
+				justify-content: center
+	
+	.konstruktor--step__comment_img img
+		width: 210px
 
 @media only screen and (max-width : 576px)
 	.profile--massag
