--- a/app/sass/_base/_modal.sass
+++ b/app/sass/_base/_modal.sass
@@ -107,13 +107,14 @@
 	top: -13px
 	display: block
 	box-shadow: 0 0 8px rgba(0, 0, 0, 0.33)
-	width: 48px
-	height: 48px
+	width: 49px
+	height: 49px
 	background-color: $accent
 	border-radius: 50%
 	border: none
 	cursor: pointer
 	transition: all .6s
+	padding: 0
 
 	&:hover, &:focus
 		outline: none
