--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -368,11 +368,18 @@
 
 	&__comment
 		align-items: center
+	
+	&__form
+		width: 100% !important
 
 	&__star
 		display: flex
 		justify-content: flex-start
+		align-items: center
 		// justify-content: flex-end
+
+		time
+			margin-left: 20px
 
 		img
 			width: 30px
