--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -416,8 +416,8 @@
 	// content: '★'
 
 .rating-area > input:checked ~ label
-	color: gold
-	text-shadow: 1px 1px #c60
+	path, svg
+		fill: $accent !important
 
 .rating-area:not(:checked) > label:hover,
 .rating-area:not(:checked) > label:hover ~ label
